Added order edit files

--- a/templates/orders/my-orders.html
+++ b/templates/orders/my-orders.html
@@ -34,7 +34,7 @@
  <!--BEGIN TABS-->
  <ul class="nav nav-tabs" role="tablist">
   <li class="active"><a href="#draft" role="tab" data-toggle="tab">Draft ({{draft_tasks|length}})</a></li>
-  <li><a href="#processing" role="tab" data-toggle="tab">Processing ({{processing_tasks|length}})</a></li>
+  <li><a href="#processing" role="tab" data-toggle="tab">Processing ({{proc_tasks|length}})</a></li>
   <li><a href="#completed" role="tab" data-toggle="tab">Completed ({{completed_tasks|length}})</a></li>
  </ul>
  
@@ -66,7 +66,7 @@
         <td>{{draft.revision}}</td>
         <td>{{draft.get_price}}$
           <form action="{% url 'order-id-buy' draft.pk %}" method="POST">
-            <input type="hidden" name="status" value="{{co.PROCESSING}}">
+            <input type="hidden" name="status" value="{{co.UNPROCESSED}}">
             {% csrf_token %}
             <button class="btn btn-primary btn-xs" type="submit">Pay now</button>
           </form>
@@ -102,7 +102,7 @@
        </tr>
       </thead>
       <tbody>
-      {% for order in processing_tasks %}
+      {% for order in proc_tasks %}
        <tr>
         <td>{{order.pk}}</td>
         <td><a href="{% url 'order-id' order.pk %}">{{order.paper_title}}</a></td>
