--- a/templates/orders/new-order.html
+++ b/templates/orders/new-order.html
@@ -20,16 +20,15 @@
  <!-- BEGIN PRICE FORM -->
  <div class="row">
   <div class="col-md-12 col-sm-12">
-  
    <form action="{% url 'new-order' %}" class="form-horizontal new-order-form-wrapper" method="post">
-   
+
      {% csrf_token %}
-     
+
     <div class="price-form">
      <ul class="nav nav-tabs margin10353530" role="tablist">
       <li class="active"><a href="#paper_details" role="tab" data-toggle="tab">Paper details</a></li>
      </ul>
-	 
+  
      {% comment %}
      TODO. Add multiple forms error handling.
      
@@ -40,39 +39,29 @@
         {% endfor %}
      {% endif %}
      {% endcomment %}
-	 
+  
      <div class="form-group {% if form.level.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">Academic Level</label>
       <div class="col-sm-5">
        <select name="level" class="form-control">
          {% for val in co.LEVELS %}
-           <option value="{{val.0}}" {%if form.level.value == val.0%}selected{% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
+           <option value="{{val.0}}" {%if form.level.value == val.0%}selected {% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
          {% endfor %}
        </select>
        {% if form.level.errors %}<span class="validation-message">{{form.level.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-	 
-     {% comment %}
-     TODO. What is type of paper. Please provide options.
-     TODO. Add error handling for each control
-          For example. {% if form.email.errors %}<span class="validation-message">{{form.email.errors|striptags}}</span>{% endif %}
-     TODO. Add error class to each control
-           {% if form.email.errors %}has-error{% endif %}   
      <div class="form-group {% if form.spacing.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">Type of Paper Needed</label>
       <div class="col-sm-5">
        <select name="spacing" class="form-control">
          {% for val in co.SPACING %}
-           <option value="{{val.0}}" {% if not val.0 %}disabled selected{% endif %}>{{val.1}}</option>
+           <option value="{{val.0}}" {%if form.spacing.value == val.0%}selected {% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
          {% endfor %}
        </select>
        {% if form.spacing.errors %}<span class="validation-message">{{form.spacing.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-     {% endcomment %}
-
-	 !!!!!!!!
      <div class="form-group {% if form.discipline.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
        Subject or Discipline
@@ -91,7 +80,24 @@
        {% if form.discipline.errors %}<span class="validation-message">{{form.discipline.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-	 
+     <div class="form-group {% if form.assigment.errors %}has-error{% endif %}">
+      <label class="col-sm-5 control-label">
+       Assigment Type
+       <span class="tooltip-wrapper">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Assigment Type">
+         <i class="icon-info-popup"></i>
+        </a>
+       </span>
+      </label>
+      <div class="col-sm-5">
+       <select name="assigment" class="form-control">
+         {% for val in co.ASSIGMENTS %}
+           <option value="{{val.0}}" {%if form.assigment.value == val.0%}selected {% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
+         {% endfor %}
+       </select>
+       {% if form.assigment.errors %}<span class="validation-message">{{form.assigment.errors|striptags}}</span>{% endif %}
+      </div>
+     </div>
      <div class="form-group {% if form.paper_title.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
        Topic
@@ -106,7 +112,6 @@
        {% if form.paper_title.errors %}<span class="validation-message">{{form.paper_title.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-
      <div class="form-group {% if form.instructions.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
        Paper Instructions
@@ -121,27 +126,20 @@
        {% if form.instructions.errors %}<span class="validation-message">{{form.instructions.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-
      <div class="form-group {% if form.source_number.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
        Number of sources
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Paper Instructions tooltip">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Number of sources">
          <i class="icon-info-popup"></i>
         </a>
        </span>
       </label>
       <div class="col-sm-5">
-       <select name="source_number" class="form-control">
-         {% for val in co.source_numbers %}
-           <option value="{{val.0}}" {%if form.source_number.value == val.0%}selected{% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
-         {% endfor %}
-       </select>
+       <input name="source_number" type="number" class="form-control" value="{{form.source_number.value|default:1}}">
        {% if form.source_number.errors %}<span class="validation-message">{{form.source_number.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-
-	 !!!!!!
      <div class="form-group {% if form.style.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">Paper format or citation style</label>
       <div class="col-sm-5">
@@ -150,34 +148,23 @@
            <option value="{{val.0}}" {%if form.style.value == val.0%}selected{% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
          {% endfor %}
        </select>
-	   {% if form.style.errors %}<span class="validation-message">{{form.style.errors|striptags}}</span>{% endif %}
+       {% if form.style.errors %}<span class="validation-message">{{form.style.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-
-	 !!!!!!!
      <div class="form-group {% if form.page_number.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
        Pages
        <span class="tooltip-wrapper">
-        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Pages tooltip">
+        <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Pages">
          <i class="icon-info-popup"></i>
         </a>
        </span>
       </label>
       <div class="col-sm-5">
-       <select name="page_number" class="form-control">
-        <option value=0  {% if form.page_number.value == val.0 %}selected{% endif %}{% if not val.0 %}disabled{% endif %}>Please select</option>
-        <option value=1 {% if form.page_number.value == val.1 %}selected{% endif %}>1</option>
-        <option value=2 {% if form.page_number.value == val.2 %}selected{% endif %}>2</option>
-        <option value=3 {% if form.page_number.value == val.3 %}selected{% endif %}>3</option>
-        <option value=4 {% if form.page_number.value == val.4 %}selected{% endif %}>4</option>
-        <option value=5 {% if form.page_number.value == val.5 %}selected{% endif %}>5</option>
-       </select>
+       <input name="page_number" type="number" class="form-control" value="{{form.page_number.value|default:1}}">
        {% if form.page_number.errors %}<span class="validation-message">{{form.page_number.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-	 
-	 !!!!!!!!!
      <div class="form-group {% if form.urgency.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
        First Draft Deadline
@@ -190,13 +177,13 @@
       <div class="col-sm-5">
        <select name="urgency" class="form-control">
          {% for val in co.URGENCY %}
-           <option value="{{val.0}}" {%if form.urgency.value == val.0%}selected{% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
+           <option value="{{val.0}}" {%if form.urgency.value == val.0%}selected {% endif %}{% if not val.0 %}disabled{% endif %}>{{val.1}}</option>
          {% endfor %}
        </select>
        {% if form.urgency.errors %}<span class="validation-message">{{form.urgency.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-	 
+
      <!--BEGIN TABS-->
      {% if not user.is_authenticated %}
      <ul class="nav nav-tabs margin3035350" role="tablist">
@@ -204,11 +191,11 @@
       <li><a href="#log_in" role="tab" data-toggle="tab">Log In</a></li>
      </ul>
      <div class="tab-content" style="border-left:2px #e6400c solid; border-top:0px; border-right:2px #e6400c solid; border-bottom:2px #e6400c solid; margin-left: 20px; margin-right: 20px; padding-bottom:20px;">
-	 
+  
       <!-- Begin new_customer Tab -->
       <div class="tab-pane active" id="new_customer">
        <fieldset>
-	   
+    
         <div class="form-group {% if request.usr_form.email.errors %}has-error{% endif %}">
          <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
          <div class="col-sm-8">
@@ -216,14 +203,14 @@
           {% if request.usr_form.email.errors %}<span class="validation-message">{{request.usr_form.email.errors|striptags}}</span>{% endif %}
          </div>
         </div>
-		
+  
         <div class="form-group {% if request.usr_form.password.errors %}has-error{% endif %}" >
          <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
          <div class="col-sm-8">
           <input type="password" name="password" class="form-control">
          </div>
         </div>
-		
+  
         <div class="form-group {% if request.usr_form.password.errors %}has-error{% endif %}">
          <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
          <div class="col-sm-8">
@@ -232,7 +219,7 @@
          </div>
         </div>
         </br>
-		
+  
        <div class="form-group {% if request.usr_form.username %} has-error {% endif %}" title="{{form.username.errors|striptags}}">
         <label class="col-sm-4 control-label">Login <span class="require">*</span></label>
         <div class="col-sm-8">
@@ -241,25 +228,25 @@
          {% if request.usr_form.username.errors %}<span class="validation-message">{{request.usr_form.username.errors|striptags}}</span>{% endif %}
         </div>
        </div>
-	   
+    
        <div class="form-group {% if request.usr_form.first_name.errors %} has-error {% endif %}" title="{{request.usr_form.first_name.errors|striptags}}">
-        <label class="col-sm-4 control-label">First Name <span class="require">*</span></label>
+        <label class="col-sm-4 control-label">First Name </label>
         <div class="col-sm-8">
          <input type="text" name="first_name" class="form-control" value="{{request.usr_form.first_name.value|default:''}}">
          {# TODO: мінімальна кількість символів 3 шт. та не може містити знаків #}
          {% if request.usr_form.first_name.errors %}<span class="validation-message">{{request.usr_form.first_name.errors|striptags}}</span>{% endif %}
         </div>
        </div>
-	   
+    
        <div class="form-group {% if request.usr_form.last_name.errors %} has-error {% endif %}" title="{{request.usr_form.first_name.errors|striptags}}">
-        <label class="col-sm-4 control-label">Last Name <span class="require">*</span></label>
+        <label class="col-sm-4 control-label">Last Name </label>
         <div class="col-sm-8">
          <input type="text" name="last_name" class="form-control" value="{{request.usr_form.last_name.value|default:''}}">
          {# TODO: мінімальна кількість символів 3 шт. та не може містити знаків #}
          {% if request.usr_form.last_name.errors %}<span class="validation-message">{{request.usr_form.last_name.errors|striptags}}</span>{% endif %}
         </div>
        </div>
-	   
+    
         <div class="form-group {% if request.usr_form.country.errors %}has-error{% endif %}">
          <label class="col-sm-4 control-label">Your country <span class="require">*</span></label>
          <div class="col-sm-8">
@@ -267,7 +254,7 @@
           {% if request.usr_form.country.errors %}<span class="validation-message">{{request.usr_form.country.errors|striptags}}</span>{% endif %}
          </div>
         </div>
-		
+  
         <div class="form-group {% if request.usr_form.phone.errors %}has-error{% endif %}">
          <label class="col-sm-4 control-label">Your phone <span class="require">*</span></label>
          <div class="col-sm-8">
@@ -275,20 +262,20 @@
           {% if request.usr_form.phone.errors %}<span class="validation-message">{{request.usr_form.phone.errors|striptags}}</span>{% endif %}
          </div>
         </div>
-		
+  
         <div class="form-group">
          <div class="col-sm-12 text-center">
           <p>Please note that in case your paper requires specific information/materials to be used, your writer will need additional time to retrieve them.</p>
          </div>
         </div>
-		
+  
        </fieldset>
       </div><!-- End new_customer Tab -->
-	  
+   
       <!-- Begin log_in Tab -->
       <div class="tab-pane" id="log_in">
         <fieldset>
-		
+  
          <div class="form-group {% if form.errors.auth_error %}has-error{% endif %}">
           <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
           <div class="col-sm-8">
@@ -312,7 +299,7 @@
          
         </fieldset>
       </div><!-- End log_in Tab -->
-	  
+   
      </div>
      <!--END TABS-->
      {% endif %}
@@ -328,17 +315,21 @@
       </label>
       <div class="col-sm-6">
        <label class="radio-inline" style="border:1px #ddd solid; height:34px; margin-right:10px;  padding:6px 12px; float:left;">
-        <input type="radio" name="materials"><span><img src="https://essayhave.com/img/common/cs/paypalsmall.png" alt=""></span>
+        <input type="radio" checked name="materials"><span><img style="width: 70px;" src="https://www.liqpay.com/static/img/logo.png" alt=""></span>
        </label>
+       {% comment %}
        <label class="radio-inline" style="border:1px #ddd solid; height:34px; margin-left:0px;  margin-top:-1px; padding:6px 12px;">
         <input type="radio" name="materials" checked><span><img src="https://essayhave.com/img/common/cs/moneybookerssmall.png" alt=""></span>
        </label>
+       {% endcomment %}
       </div>
      </div>
+     {% comment %}
      <div class="form-group total">
       <label class="col-sm-5 control-label large-text">Total Price</label>
       <label class="col-sm-5 control-label text-left">$72.00</label>
      </div>
+     {% endcomment %}
      <div class="form-group">
       <div class="col-sm-12 text-center">
        <p>By clicking "Proceed to safe payment" button you agree to the <a href="#">Terms and Conditions</a>, <a href="#">MoneyBack Policy</a> and <a href="#">Privacy Policy</a></p> 
@@ -353,9 +344,8 @@
      </br></br>
 
     </div><!--price-form-->
-	
+ 
    </form>
-   
   </div>
  </div>
  <!-- END PRICE FORM -->
