--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -36,15 +36,15 @@
 
  <!--BEGIN TABS-->
  <ul class="nav nav-tabs" role="tablist">
-  <li class="active"><a href="#details" role="tab" data-toggle="tab">Order details</a></li>
-  <li><a href="#files" role="tab" data-toggle="tab">Files</a></li>
-  <li><a href="#messages" role="tab" data-toggle="tab">Messages ({{msgs|length}})</a></li>
+  <li class="{% if request.GET.details or not request.GET.files and not request.GET.messages%}active{% endif %}"><a href="#details" role="tab" data-toggle="tab">Order details</a></li>
+  <li class="{% if request.GET.files %}active{% endif %}"><a href="#files" role="tab" data-toggle="tab">Files</a></li>
+  <li class="{% if request.GET.messages %}active{% endif %}"><a href="#messages" role="tab" data-toggle="tab">Messages ({{msgs|length}})</a></li>
  </ul>
  
  <div class="tab-content">
 
   <!-- Begin Details Tab -->
-  <div class="tab-pane active" id="details">
+  <div class="tab-pane {% if request.GET.details or not request.GET.files and not request.GET.messages %}active{% endif %}" id="details">
    <div class="table-responsive">
     <table class="table table-striped">
      <tbody>
@@ -169,122 +169,12 @@
    </div>
   </div><!-- End Details Tab -->
 
-  
-  <!-- Begin Files Tab -->
-  <div class="tab-pane" id="files">
-  
-   <!-- Begin If no files found CODE -->
-   <form action="{% url 'order-upload' order.pk %}" class="form-horizontal">
-    <div class="form-group">
-     <label class="col-sm-3 control-label">No files found</label>
-     <div class="col-sm-9">
-      <a class="btn btn-default" data-toggle="modal" data-target="#modalUploadFile">Upload file</a>
-     </div>
-    </div>
-   </form>
-   <!-- End If no files found CODE -->
+  {% include "orders/files_tab.html" %}
+  {% include "orders/msgs_tab.html" %}
 
-   <!-- Begin If files uploaded -->
-   <br><br>
-   <div class="table-responsive">
-    <table class="table table-striped table-bordered tablesorter">
-     <thead>
-      <tr>
-       <th>Date created</th>
-       <th>File name</th>
-       <th>Visibility</th>
-      </tr>
-     </thead>
-     <tbody>
-      {% for upload in uploads %}
-        <tr>
-         <td>{{upload.created}}</td>
-         <td><a href="{% url 'order-upload-download' upload.pk %}">{{upload.attach}}</a></td>
-         <td>{% if not upload.access_level %}Public{% else %}Private{% endif %}</td>
-        </tr>
-      {% empty %}
-        <tr>
-          <td colspan="3">No files found yet.</td>
-        </tr>
-      {% endfor %}
-     </tbody>
-    </table>
-   </div>
-   <a class="btn btn-default" data-toggle="modal" data-target="#modalUploadFile">Upload file</a>
-   <!-- End If files uploaded -->
-   
-  </div><!-- End Files Tab -->
-
-  
-  <!-- Begin Messages Tab -->
-  <div class="tab-pane" id="messages">
-   <div id="messages-list">
-    {% for msg in msgs %}
-      {% if request.user.pk == msg.mowner.pk %}
-      <div class="row message-mine">
-       <div class="col-md-2 col-sm-2 col-xs-2">
-	<div class="user-avatar"><img src="{{ STATIC_URL }}images/thumb-user-default.jpg" alt=""></div>
-       </div>
-       <div class="col-md-10 col-sm-10 col-xs-10 message">
-        <div class="message-time">I am at: {{msg.created}}</div>
-        <div class="message-subj">{{msg.title}}</div>
-        <div class="message-text">{{msg.body}}</div>
-       </div>
-      </div>
-      {% else %}
-      <div class="row message-support">
-       <div class="col-md-10 col-sm-10 col-xs-10 message">
-        <div class="message-time">{# OR writer #}Support at: {{msg.created}}</div>
-        <div class="message-subj">{{msg.title}}</div>
-        <div class="message-text">{{msg.body}}</div>
-       </div>
-       <div class="col-md-2 col-sm-2 col-xs-2">
-        <div>{{msg.mowner.username}}</div>
-		{# OR writer: http://genttech.com/essaycoffee/images/thumb-writter-default.png #}
-		<div class="user-avatar"><img src="{{ STATIC_URL }}images/thumb-support-default.png" alt=""></div>
-       </div>
-      </div>
-      {% endif %}
-    {% endfor %}
-   </div>
-
-   <div class="row message-reply-form">
-    <form action="{% url 'order-msg-new' order.pk %}" class="form-horizontal" method="post">
-     {% csrf_token %}
-	 
-     <div class="form-group">
-      <div class="col-md-12 col-sm-12">
-       <label class="col-md-2 col-sm-2 col-xs-12 control-label">Send to:</label>
-       <div class="col-md-4 col-sm-4 col-xs-12">
-        <select name="visibility" class="form-control">
-         <option value="{{co.MSGS_WRITER}}" >Writer</option>
-         <option value="{{co.MSGS_ADM}}" >Admin&Editor</option>
-        </select>
-       </div>
-      </div>
-     </div>
-
-     <div class="form-group">
-      <div class="col-md-12 col-sm-12">
-       <input type="text" name="title" class="form-control" placeholder="Subject">
-      </div>
-     </div>
-
-     <div class="form-group">
-      <div class="col-md-12 col-sm-12">
-      <textarea name="body" class="form-control" placeholder="Type a message here..." rows="3"></textarea>
-      </div>
-     </div>
-	 
-     <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-   </div>
-  </div><!-- End Messages Tab -->
-  
  </div>
  <!--END TABS-->
 
- 
  <!-- BEGIN MODALS -->
  <!-- begin Extend modal-->
  <div class="modal fade order-modal" id="modalExtend" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
