--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,7 +14,7 @@
     <ul class="list-group">
       <li class="list-group-item active"><a href="{% url 'login' %}">Log In</a></li>
       <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
-      <li class="list-group-item"><a href="{% url 'forgot' %}">Restore Password</a></li>
+      <li class="list-group-item"><a href="{% url 'password-change' %}">Restore Password</a></li>
     </ul>
   </section>
 </div>
@@ -45,7 +45,7 @@
    </div>
    <div class="row">
     <div class="col-sm-8 col-md-offset-4 forgot-link">
-     <a href="{% url 'forgot' %}">Forget Password?</a>
+     <a href="{% url 'password-change' %}">Forget Password?</a>
     </div>
    </div>
    
