Did some minor fixes

--- a/templates/html/slider.html
+++ b/templates/html/slider.html
@@ -19,7 +19,7 @@
 				data-start="1500" 
 				data-easing="easeOutBack">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div>
 				
-				<a href="order" class="caption lft slide-btn btn-transparent"
+				<a href="{% url 'new-order' %}" class="caption lft slide-btn btn-transparent"
 				data-x="190" 
 				data-y="226" 
 				data-speed="400" 
@@ -43,7 +43,7 @@
 				data-start="1500" 
 				data-easing="easeOutBack">Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div>
 				
-				<a href="order" class="caption lft slide-btn btn-transparent"
+				<a href="{% url 'new-order' %}" class="caption lft slide-btn btn-transparent"
 				data-x="190" 
 				data-y="226" 
 				data-speed="400" 
