--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -29,7 +29,7 @@
    <div class="form-group {% if form.errors %}has-error{% endif %}">
     <label class="col-sm-4 control-label">Login <span class="require">*</span></label>
     <div class="col-sm-8">
-     <input type="text" name="username" class="form-control" required>
+     <input type="text" name="username" value="{{form.username.value|default:''}}" class="form-control" required>
     </div>
    </div>
    <div class="form-group {% if form.errors %}has-error{% endif %}">
